--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,13 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.karumi:dexter:6.2.2'
-//    implementation 'ca.antonious:materialdaypicker:0.7.3'
+    implementation 'ca.antonious:materialdaypicker:0.7.3'
+
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.1'
+    apply plugin: "androidx.navigation.safeargs"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
