--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MinorVendorApp">
+        <activity
+            android:name=".ActivityHomeScreen"
+            android:label="@string/title_activity_home_screen"></activity>
         <activity android:name=".ActivityProductAdd" />
         <activity android:name=".Signup.ActivitySignup" />
         <activity android:name=".ActivityRoot">
