Added: LocationDetails added to FragmentDialogAddressPicker.java
Added: Regex Handling for Signup by Harshit

Refactor: ObjectLocationDetails.java

Added: HomeScreen Navigation

Misc. changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.MinorVendorApp">
         <activity
             android:name=".ActivityHomeScreen"
-            android:label="@string/title_activity_home_screen"></activity>
+            android:label="@string/title_activity_home_screen" />
         <activity android:name=".ActivityProductAdd" />
         <activity android:name=".Signup.ActivitySignup" />
         <activity android:name=".ActivityRoot">
