Last commit before UDAAN
Added : ProductsFragment.java , Product listing feature.

Added : ProfileFragment.java , Profile set & update feature.

Added : Edit/Update feature to AddProduct.

Added : ActivityLogin.java , login user feature.

Added : NetworkConfigs.xml file.

Feature : Logout functionality & required management.

Fix : Fixed timeout &b retry limit for Volley requests.

Fix/Refactor : FragmentDialogAddressPicker.java & FragmentDialogShopTimingsPicker.java now compatible with fragments as well.

Refactor : User data is now updated when user Logins in sharedPreferences.

Multiple misc. changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,17 +16,30 @@
         android:usesCleartextTraffic="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.MinorVendorApp">
-        <activity android:name=".ActivityPreSignUp"/>
-        <activity android:name=".ActivityLogin"/>
         <activity
-            android:name=".ActivityHomeScreen"
-            android:label="@string/title_activity_home_screen" />
+            android:name=".Signup.ActivityPreSignUp"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".ActivityProductAdd" />
+        <activity
+            android:name=".Login.ActivityLogin"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".Signup.ActivitySignup" />
+        <activity
+            android:name=".Nav.ActivityHomeScreen"
+            android:label="@string/title_activity_home_screen"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".ActivityRoot">
+        <activity
+            android:name=".Nav.Products.ActivityProductAdd"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".Signup.ActivitySignup"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ActivityRoot"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
