--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,37 +11,35 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MinorVendorApp">
+        android:theme="@style/Theme.MinorVendorApp"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Nav.Home.ActivityViewOrderDetails"></activity>
+        <activity android:name=".UserAuth.ActivityUserAuth" />
         <activity
             android:name=".Signup.ActivityPreSignUp"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".Login.ActivityLogin"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".Nav.ActivityHomeScreen"
             android:label="@string/title_activity_home_screen"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".Nav.Products.ActivityProductAdd"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".Signup.ActivitySignup"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ActivityRoot"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -49,7 +47,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
     </application>
 
 </manifest>
